[gd_scene load_steps=12 format=3 uid="uid://cifls18qq3qvy"]

[ext_resource type="Script" uid="uid://qve8p7i34yyx" path="res://components/weapons/area_damage/area_damage.gd" id="1_now15"]
[ext_resource type="PackedScene" uid="uid://cb2roqwnqe0al" path="res://components/hitbox/hit_box.tscn" id="1_s71ww"]
[ext_resource type="PackedScene" uid="uid://c03aqukr6wrum" path="res://components/ranger_activator/range_activator.tscn" id="3_205rj"]
[ext_resource type="Script" uid="uid://3wtv26ldj4iu" path="res://effects/effect_res.gd" id="3_n6l6i"]
[ext_resource type="Texture2D" uid="uid://dxfyhld4qs6qp" path="res://red-circle.webp" id="4_3be1c"]
[ext_resource type="Script" uid="uid://b6q6mmbv7an12" path="res://effects/damage_overtime_effect_res.gd" id="4_8lk5l"]

[sub_resource type="CircleShape2D" id="CircleShape2D_205rj"]
radius = 200.0

[sub_resource type="Resource" id="Resource_572yg"]
script = ExtResource("4_8lk5l")
damage = 3.0
duration = 3.0
interval = 3.0
metadata/_custom_type_script = "uid://b6q6mmbv7an12"

[sub_resource type="Animation" id="Animation_3be1c"]
resource_name = "hit"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitBox:monitoring")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RedCircle:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.7411765), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_jqv5v"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitBox:monitoring")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RedCircle:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.7411765)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n6l6i"]
_data = {
&"RESET": SubResource("Animation_jqv5v"),
&"hit": SubResource("Animation_3be1c")
}

[node name="AreaDamage" type="Node2D"]
script = ExtResource("1_now15")
shape = SubResource("CircleShape2D_205rj")

[node name="HitBox" parent="." instance=ExtResource("1_s71ww")]
monitoring = false
effects = Array[ExtResource("3_n6l6i")]([SubResource("Resource_572yg")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]

[node name="RangeActivator" parent="." instance=ExtResource("3_205rj")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RangeActivator"]

[node name="RedCircle" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.7411765)
scale = Vector2(0.83, 0.83)
texture = ExtResource("4_3be1c")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_n6l6i")
}

[connection signal="activate" from="RangeActivator" to="." method="_on_range_activator_activate"]
